allow attaching assets to releases
